
	* test/files/invalid-smarts.txt: Add invalid ring closure bond
	specifications suggested by Craig in PR#1503849.

	* src/parsmart.cpp: Fix PR#1503849 for invalid SMARTS ring
	closures -- check both beginning and end bond specifications for
	the closure. Uses new function EquivalentBondExpr to test if
	two bond specifications are equivalent.

2006-06-15 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/smilesformat.cpp(ParseSmiles): when using 
	extension and bond is doubled, add 
	UnsetImplicitValencePerceived() so that implicit hydrogens are
	recounted.
	
	* src/formats/smilesformat.cpp(GetSmilesElement): ensure explicit
	hydrogens are always written with bracketed atoms (esp when
	charged; [OH3+] was being output incorrectly).
	
	* test/files/FormulaTest.smi: Added. Contains several small
	molecules to test SMILES input, implicit hydrogen detection
	and elemental formula generation. 

2006-06-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/base.h, src/base.cpp: Add "const" qualifiers to
	OBGenericData methods.

	* src/mol.h: Add documentation, including patch contributed by
	Carsten Niehaus.

	* scripts/*/*.cpp: Regenerated using SWIG for above changes.

	* test/invalidsmiles.cpp, test/files/invalid-smiles.txt: New
	test. Check to see that invalid SMILES are properly rejected.

	* test/smilesmatch.cpp: New test. Check to see if SMILES strings
	match themselves using SMARTS.

	* test/Makefile.am, test/Makefile.in, test/wrapper.sh: Add
	invalidsmiles and smilesmatch to test list.

2006-06-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/parsmart.cpp: Completely reject dot-disconnected SMARTS
	e.g. "C.C" which currently are unimplemented and can cause
	crashes, e.g. PR#1505711.

	* src/obutil.cpp (SafeOpen): Make filename arguments "const".

	* test/*.cpp: Update to use new SafeOpen prototypes and remove
	old-style casts to (char*) to remove const.
	
	* test/invalidsmarts.cpp: New test to check that invalid SMARTS